applications/configuration-server/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configuration-server-ingress
  namespace: quizmeup
